# trivia_project

./: .gitignore  pyproject.toml  requirements.txt
myproject/trivia/: asgi.py  settings.py  urls.py  wsgi.py
myproject/users/: models.py  serializer.py  signals.py  urls.py  views.py
myproject/users/migrations/: 0001_initial.py
