[project]
name = "trivia-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "click==8.2.1",
    "django==5.2.1",
    "django-mysql==4.17.0",
    "django-rest-framework==0.1.0",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt==5.5.0",
    "h11==0.16.0",
    "mysqlclient==2.2.7",
    "pyjwt==2.9.0",
    "pymysql==1.1.1",
    "redis>=6.1.0",
    "sqlparse==0.5.3",
    "uvicorn==0.34.2",
]
